# SAE_space_shooter

./: .gitignore  CMakeLists.txt  README.md  background.cpp  background.h  entity.cpp  entity.h  game.cpp  game.h  hud_manager.cpp  hud_manager.h  main.cpp  player.cpp  player.h  resources_manager.cpp  resources_manager.h  state_manager.cpp
include/: enemy_spawner.h  entity.h  game.h  hud_manager.h  player.h  resources_manager.h  state_manager.h
src/: background.cpp  enemy_spawner.cpp  entity.cpp  game.cpp  hud_manager.cpp  main.cpp  player.cpp  resources_manager.cpp  state_manager.cpp
